Fixed text overflow for long app names in AdminCP.

--- a/PF.Base/theme/adminpanel/default/style/default/css/custom.css
+++ b/PF.Base/theme/adminpanel/default/style/default/css/custom.css
@@ -6237,6 +6237,9 @@ i._zz {
   left: 0px;
   right: 0px;
   font-size: 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .app_icons {
   display: block;
