--- a/PF.Base/theme/adminpanel/default/style/default/less/modules/apps.less
+++ b/PF.Base/theme/adminpanel/default/style/default/less/modules/apps.less
@@ -39,6 +39,9 @@
 				left:0px;
 				right:0px;
 				font-size:12px;
+				overflow:hidden;
+				text-overflow:ellipsis;
+				white-space:nowrap;
 			}
 		}
 	}
